plugins/authentication/oidc/2-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plugin-name-plugin
  namespace: testing
  annotations:
    konghq.com/plugins: plugin-name-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /plugin-example
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 80
